Modified CSS. Code cleanup and minor changes

--- a/src/components/analyze/aq-analyze-home-backtest-item.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item.html
@@ -52,7 +52,7 @@
 			padding: 0px;
 
 			margin-top:15px;
-			--paper-checkbox-checked-color: #cf6766;--teal;
+			--paper-checkbox-checked-color: #cc6666;;--teal;
 		}
 
 	 	#content :hover{
