--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -52,7 +52,7 @@
 			margin-right: 15px;
 
 			margin-top:15px;
-			--paper-checkbox-checked-color: #cf6766;--teal;
+			--paper-checkbox-checked-color: #cc6666;;--teal;
 		}
 
 	 	#content :hover{
@@ -95,7 +95,7 @@
 		}
 
 		paper-icon-button {
-			color:#cf6766;--teal;
+			color:#cc6666;;--teal;
 			opacity: 0.4;
 		}
 
