--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -93,7 +93,7 @@
 			padding:5px;
 			width:35px;
     		margin-right: 10px;
-    		color: #cf6766;
+    		color: #cc6666;;
     		--paper-icon-button-disabled-text:grey;
     		--paper-icon-button-disabled:{
 				color: #cacaca !important;
