--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -31,9 +31,10 @@
         text-align: left;
         margin-left: 0px !important;
       };
-      --paper-toolbar-background: #24293d;
-      border-bottom: 3px solid #cf6766;
+      --paper-toolbar-background: #f2fbf7;--#24293d;
+      border-bottom: 3px solid #cc6666;
       height:70px;
+      color:teal;
     }
 
     paper-menu {
@@ -48,7 +49,7 @@
       --paper-menu-selected-item: {
         --text-decoration: underline;
         background-color: white;--#e3f6ed;--#f4f9fb;
-        border: 1px solid #c3403f;--teal;--#e24e42;;
+        border: 1px solid #cc6666;--teal;--#e24e42;;
       }
 
       --paper-menu-focused-item: {
@@ -61,7 +62,7 @@
     iron-icon{
      --iron-icon-width:20px;
      --iron-icon-height:20px;
-     --color:#24293d;
+     
      color: teal !important;
    }
 
