--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -20,14 +20,16 @@
         text-align: left;
         margin-left: 0px !important;
       };
-
-      --border-top: 5px solid #cf6766;
-      border-bottom: 3px solid #cf6766;
+  }
+  
+  paper-toolbar{
+      border-bottom: 3px solid #cc6666;
       height:70px;
-    }
+      color:teal;
+  }
   
   paper-toolbar {
-      --paper-toolbar-background:#24293d;--#24293d;--#30415d;--#1C263C;
+      --paper-toolbar-background:#f2fbf7;
       
       --opacity:var(--dark-primary-opacity);
       --border-bottom: 1px solid #e0e0e0;
@@ -39,7 +41,7 @@
     }
 
     paper-tabs {
-      --paper-tabs-selection-bar-color:white;
+      --paper-tabs-selection-bar-color:teal;--;white;
     }
    
   </style>
