--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -15,7 +15,7 @@
 		
 		paper-card{
 			width:100%;
-			border-top: 2px solid #cf6766;
+			border-top: 2px solid #cc6666;;
 			color:#24293d;
 		}
 
