--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -82,7 +82,7 @@
 			width:35px;
     		height:35px;
     		margin-right: 10px;
-    		color: #cf6766;
+    		color: #cc6666;;
     		margin-bottom: 40px;
 		}
 
