--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -21,7 +21,7 @@
     }
 
     #heading span {
-      color:#cf6766;--#c3403f;
+      color:#cc6666;;--#cc6666;
     }
 
     #category {
@@ -52,7 +52,7 @@
       margin-right: 15px;
       margin-top:5px;
       outline: 1px solid; 
-      color: #cf6766; --white;
+      color: #cc6666;; --white;
       background-color: white; 
       outline:1px solid teal;
     }
@@ -65,7 +65,7 @@
     #followers {
       font-size:15px;
       font-style: italic;
-      color: #cf6766;
+      color: #cc6666;;
       margin-right:10px;
     }
 
@@ -180,14 +180,14 @@
         if (followers.indexOf(userId) > -1){
           // Change the icon color too
           this.$.followIcon.style.color = 'white';
-          this.$.followIcon.style.backgroundColor = '#cf6766';
-          this.$.followIcon.style.outlineColor = '#cf6766';
+          this.$.followIcon.style.backgroundColor = '#cc6666';
+          this.$.followIcon.style.outlineColor = '#cc6666';
           return "UnFollow";
           //this.$.followIcon
 
         }
 
-        this.$.followIcon.style.color = '#cf6766';
+        this.$.followIcon.style.color = '#cc6666';
         this.$.followIcon.style.backgroundColor = 'white';
 
         return "Follow";
