--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -32,12 +32,12 @@
     }
 
     #errorMessage {
-      color:#c3403f;
+      color:#cc6666;
     }
 
     #attachedMessageDiv {
         --display: none;
-        color:#c3403f;
+        color:#cc6666;
         font-size:14px;
         height:32px;
         margin-bottom: 10px;
