--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -77,7 +77,7 @@
 			width:35px;
     		margin-right: 5px;
     		margin-left: 5px;
-    		color: #cf6766;
+    		color: #cc6666;;
     		--paper-icon-button-disabled:{
 				color: #cacaca !important;
 			};
