--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -42,7 +42,7 @@
         }
 
         paper-checkbox {
-	        --paper-checkbox-checked-color: #cf6766;--#24293d; --#99ced4;
+	        --paper-checkbox-checked-color: #cc6666;--#24293d; --#99ced4;
         }
 	    
         .row.hover {
