--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -54,7 +54,7 @@
       iron-icon {
         height:18px;
         width: 18px;
-        color: #cf6766;--teal;
+        color: #cc6666;;--teal;
         --margin-bottom: -35px;
         --margin-top:-15px;
       }
