--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -89,7 +89,8 @@
 		#extra-settings {
 			--height:80px;
 			margin-top:8px;
-			margin-left:14px;
+			margin-left:7px;
+			margin-right:7px;
 			--border: 1px solid #e5e5e5;	
 			--width:90%;			
 		}
