--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -290,7 +290,7 @@
 
               // Send to backedn only if available. Backend can't handle empty backtestids 
               if(this.attachedBacktestId && this.attachedBacktestId!="") {
-                this.threadData["backtest_id"] = this.attachedBacktestId;
+                this.threadData["backtestId"] = this.attachedBacktestId;
               }
 
               if(this.threadData["title"]!="" && 
