--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -62,7 +62,7 @@
       text-decoration: none;
       font-size: 18px;
       color: black;
-      color:#cc6666;
+      color:#c3403f;
     }
 
     a:hover {
@@ -225,6 +225,7 @@
       </div>
 
     </paper-card>
+
   </template>
   	
 
@@ -246,10 +247,6 @@
         postContent:String,
         totalFollowers:Number,
         hasBacktest:Boolean
-      },
-
-      attached: function() {
-        console.log(this.hasBacktest);
       },
 
       getInitials(firstName, lastName) {
